--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
+          <img src="assets/img/hero-img.jpeg" class="rounded-circle" alt="" data-aos="zoom-out" data-aos-delay="300">
         </div>
       </div>
     </div>
